launch config
the app setup launched to ebs. currently working on db import